tests/baselines/reference/unknownSymbols1.errors.txt
tests/cases/compiler/unknownSymbols1.ts(1,9): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(2,8): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(4,17): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(4,35): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(6,12): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(9,10): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(12,10): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(13,12): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(16,21): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(17,21): error TS2304: Cannot find name 'adsf'.
tests/cases/compiler/unknownSymbols1.ts(22,15): error TS2304: Cannot find name 'asdf'.
tests/cases/compiler/unknownSymbols1.ts(30,14): error TS2339: Property 'asdf' does not exist on type 'C5'.
tests/cases/compiler/unknownSymbols1.ts(30,21): error TS2304: Cannot find name 'asdf'.


==== tests/cases/compiler/unknownSymbols1.ts (13 errors) ====
    var x = asdf;
            ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    var y: asdf;
           ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    
    function foo(x: asdf, y: number): asdf { }
                    ~~~~
!!! error TS2304: Cannot find name 'asdf'.
                                      ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    function foo2() {
        return asdf;
               ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    }
    
    var z = <asdf>x; // should be an error
             ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    
    class C<T> {
        foo: asdf;
             ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        bar: C<asdf>;
               ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    }
    
    class C2 implements asdf { }
                        ~~~~
!!! error TS2304: Cannot find name 'asdf'.
    interface I extends adsf { }
                        ~~~~
!!! error TS2304: Cannot find name 'adsf'.
    
    class C3 { constructor(x: any) { } }
    class C4 extends C3 {
        constructor() {
            super(asdf);
                  ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        }
    }
    
    var x2 = this.asdf; // no error, this is any
    
    class C5 {
        constructor() {
            this.asdf = asdf;
                 ~~~~
!!! error TS2339: Property 'asdf' does not exist on type 'C5'.
                        ~~~~
!!! error TS2304: Cannot find name 'asdf'.
        }
    }